[tool.poetry]
name = "strain-selection"
version = "0.1.0"
description = "Streamlit app to house the analysis I did previously in an ipynb to identify statistically significant strains expressing target molecules. Conversion to streamlit format for better exposition."
authors = ["patimus-prime <patrick.finnerty42@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "strain_selection"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.0.2"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
datasets = "^2.13.1"
plotly = "^5.15.0"
altair = "^5.0.1"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
